Fix spacing issues with entry and profile pages

--- a/client/src/components/pages/players/Entry/Entry.module.scss
+++ b/client/src/components/pages/players/Entry/Entry.module.scss
@@ -2,7 +2,8 @@
 
 // Form
 .form {
-  padding-top: 0em;
+  padding-top: 0rem;
+  padding-bottom: 4.5rem;
 }
 
 // Form Group
