--- a/client/src/components/pages/shared/Profile/Profile.module.scss
+++ b/client/src/components/pages/shared/Profile/Profile.module.scss
@@ -2,7 +2,8 @@
 
 // Form
 .form {
-  padding-top: 4em;
+  padding-top: 4rem;
+  padding-bottom: 4.5rem;
 }
 
 // Form Group
